--- a/package.json
+++ b/package.json
@@ -9,8 +9,20 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@rollup/plugin-node-resolve": "^13.0.5",
+    "@rollup/plugin-typescript": "^8.2.5",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.9.6",
+    "babel-jest": "^27.2.1",
     "jest": "^27.2.1",
-    "rollup": "^2.57.0"
+    "rollup": "^2.57.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.2.1",
+    "tslib": "^2.3.1",
+    "typescript": "^4.4.3"
   },
   "scripts": {
     "test": "jest",
