--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ctxexp-parser",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "main": "libs/ctxexp-parser.cjs.js",
   "module": "libs/ctxexp-parser.esm.js",
   "types": "./types/index.d.ts",
@@ -31,6 +31,7 @@
     "jest": "^27.2.1",
     "rollup": "^2.57.0",
     "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
