refactor: 重构类型定义文件组织结构
- 将类型定义文件从 types/core 目录迁移到 libs/core 目录
- 修正 toTokens 方法返回类型从 any[] 改为 Token[]
- 将 TypeScript 类型声明从 declare type 改为 type(移除 declare 关键字)
- 为 Token 枚举添加注释说明(DEF_VAR 标记为 no use,DT_FN 标记为 =>)

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.2",
   "main": "libs/ctxexp-parser.cjs.js",
   "module": "libs/ctxexp-parser.esm.js",
-  "types": "./types/index.d.ts",
+  "types": "./libs/index.d.ts",
   "description": "A parser that can execute JS in an environment that cannot execute JS dynamically.",
   "directories": {
     "lib": "libs",
@@ -19,23 +19,21 @@
     "url": "git+https://github.com/WumaCoder/ctxexp-parser.git"
   },
   "license": "MIT",
-  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@babel/preset-env": "^7.15.6",
-    "@rollup/plugin-node-resolve": "^13.0.5",
-    "@rollup/plugin-typescript": "^8.2.5",
-    "@types/jest": "^27.0.2",
-    "@types/node": "^16.9.6",
-    "babel-jest": "^27.2.1",
-    "jest": "^27.2.1",
-    "rollup": "^2.57.0",
-    "rollup-plugin-typescript2": "^0.30.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "ts-jest": "^27.0.5",
+    "@rollup/plugin-node-resolve": "^16.0.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.0",
+    "babel-jest": "^30.2.0",
+    "jest": "^30.2.0",
+    "rollup": "^4.53.2",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.2.1",
     "tslib": "^2.3.1",
-    "typescript": "^4.4.3"
+    "typescript": "^5.9.3"
   },
   "keywords": [
     "dynamic",
